assignment2/initial/src/main/d96/parser/.antlr/D96Parser.py
# Generated from c:\Users\USER PC\Documents\HCMUT\212\PPL\Assignment\assignment2\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'In'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Return'", "'Null'", "'Class'", "'Val'", 
                     "'Var'", "'Self'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'==.'", "'+.'", "'::'", "'('", "')'", "'['", "']'", 
                     "'.'", "'..'", "':'", "','", "';'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "BOOLLIT", "BREAK", "CONTINUE", "IF", 
                      "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", 
                      "IN", "INT", "FLOAT", "BOOLEAN", "STRING", "RETURN", 
                      "NULL", "CLASS", "VAL", "VAR", "SELF", "CONSTRUCTOR", 
                      "DESTRUCTOR", "NEW", "BY", "ID", "DOLLARID", "COMMENT", 
                      "ADDOP", "SUBOP", "MULOP", "DIVOP", "MODOP", "NOTOP", 
                      "ANDOP", "OROP", "EQUOP", "ASSIOP", "NEOP", "LTOP", 
                      "LTEOP", "GTOP", "GTEOP", "DOUEQUODOTOP", "ADDDOTOP", 
                      "DOUCOLON", "LB", "RB", "LSB", "RSB", "DOT", "DOUDOT", 
                      "COLON", "COMMA", "SEMI", "LP", "RP", "ARRAYSIZE", 
                      "INTLIT", "FLOATLIT", "STRINGLIT", "WS", "ERROR_CHAR", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_classbody = 2
    RULE_attrdecl = 3
    RULE_mutable = 4
    RULE_immutable = 5
    RULE_nonvalue = 6
    RULE_value = 7
    RULE_methdecl = 8
    RULE_basicmeth = 9
    RULE_constructor = 10
    RULE_destructor = 11
    RULE_paralist = 12
    RULE_parasingle = 13
    RULE_methodattrdecl = 14
    RULE_nonvaluemethod = 15
    RULE_valuemethod = 16
    RULE_indexedarray = 17
    RULE_arraylist = 18
    RULE_multiarray = 19
    RULE_multiarraylist = 20
    RULE_blockstmt = 21
    RULE_stmt = 22
    RULE_assignstmt = 23
    RULE_indexexp = 24
    RULE_ifstmt = 25
    RULE_thenstmt = 26
    RULE_elseifstmts = 27
    RULE_elseifstmt = 28
    RULE_elsestmt = 29
    RULE_forinstmt = 30
    RULE_breakstmt = 31
    RULE_continuestmt = 32
    RULE_returnstmt = 33
    RULE_methodinvostmt = 34
    RULE_explist = 35
    RULE_exp = 36
    RULE_exp0 = 37
    RULE_exp1 = 38
    RULE_exp2 = 39
    RULE_exp3 = 40
    RULE_exp4 = 41
    RULE_exp5 = 42
    RULE_exp6 = 43
    RULE_exp7 = 44
    RULE_exp8 = 45
    RULE_exp9 = 46
    RULE_operands = 47
    RULE_literals = 48
    RULE_typ = 49
    RULE_arraytyp = 50
    RULE_primitivetyp = 51

    ruleNames =  [ "program", "classdecl", "classbody", "attrdecl", "mutable", 
                   "immutable", "nonvalue", "value", "methdecl", "basicmeth", 
                   "constructor", "destructor", "paralist", "parasingle", 
                   "methodattrdecl", "nonvaluemethod", "valuemethod", "indexedarray", 
                   "arraylist", "multiarray", "multiarraylist", "blockstmt", 
                   "stmt", "assignstmt", "indexexp", "ifstmt", "thenstmt", 
                   "elseifstmts", "elseifstmt", "elsestmt", "forinstmt", 
                   "breakstmt", "continuestmt", "returnstmt", "methodinvostmt", 
                   "explist", "exp", "exp0", "exp1", "exp2", "exp3", "exp4", 
                   "exp5", "exp6", "exp7", "exp8", "exp9", "operands", "literals", 
                   "typ", "arraytyp", "primitivetyp" ]

    EOF = Token.EOF
    BOOLLIT=1
    BREAK=2
    CONTINUE=3
    IF=4
    ELSEIF=5
    ELSE=6
    FOREACH=7
    TRUE=8
    FALSE=9
    ARRAY=10
    IN=11
    INT=12
    FLOAT=13
    BOOLEAN=14
    STRING=15
    RETURN=16
    NULL=17
    CLASS=18
    VAL=19
    VAR=20
    SELF=21
    CONSTRUCTOR=22
    DESTRUCTOR=23
    NEW=24
    BY=25
    ID=26
    DOLLARID=27
    COMMENT=28
    ADDOP=29
    SUBOP=30
    MULOP=31
    DIVOP=32
    MODOP=33
    NOTOP=34
    ANDOP=35
    OROP=36
    EQUOP=37
    ASSIOP=38
    NEOP=39
    LTOP=40
    LTEOP=41
    GTOP=42
    GTEOP=43
    DOUEQUODOTOP=44
    ADDDOTOP=45
    DOUCOLON=46
    LB=47
    RB=48
    LSB=49
    RSB=50
    DOT=51
    DOUDOT=52
    COLON=53
    COMMA=54
    SEMI=55
    LP=56
    RP=57
    ARRAYSIZE=58
    INTLIT=59
    FLOATLIT=60
    STRINGLIT=61
    WS=62
    ERROR_CHAR=63
    ILLEGAL_ESCAPE=64
    UNCLOSE_STRING=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassdeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 104
                self.classdecl()
                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 109
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def classbody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassbodyContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassbodyContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_classdecl




    def classdecl(self):

        localctx = D96Parser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(D96Parser.CLASS)
            self.state = 112
            self.match(D96Parser.ID)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 113
                self.match(D96Parser.COLON)
                self.state = 114
                self.match(D96Parser.ID)


            self.state = 117
            self.match(D96Parser.LP)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.ID) | (1 << D96Parser.DOLLARID))) != 0):
                self.state = 118
                self.classbody()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassbodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrdecl(self):
            return self.getTypedRuleContext(D96Parser.AttrdeclContext,0)


        def methdecl(self):
            return self.getTypedRuleContext(D96Parser.MethdeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classbody




    def classbody(self):

        localctx = D96Parser.ClassbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classbody)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.attrdecl()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.methdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def mutable(self):
            return self.getTypedRuleContext(D96Parser.MutableContext,0)


        def immutable(self):
            return self.getTypedRuleContext(D96Parser.ImmutableContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attrdecl




    def attrdecl(self):

        localctx = D96Parser.AttrdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attrdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAR]:
                self.state = 130
                self.mutable()
                pass
            elif token in [D96Parser.VAL]:
                self.state = 131
                self.immutable()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 134
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def nonvalue(self):
            return self.getTypedRuleContext(D96Parser.NonvalueContext,0)


        def value(self):
            return self.getTypedRuleContext(D96Parser.ValueContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_mutable




    def mutable(self):

        localctx = D96Parser.MutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mutable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(D96Parser.VAR)
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 137
                self.nonvalue()
                pass

            elif la_ == 2:
                self.state = 138
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmutableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def nonvalue(self):
            return self.getTypedRuleContext(D96Parser.NonvalueContext,0)


        def value(self):
            return self.getTypedRuleContext(D96Parser.ValueContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_immutable




    def immutable(self):

        localctx = D96Parser.ImmutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_immutable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(D96Parser.VAL)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 142
                self.nonvalue()
                pass

            elif la_ == 2:
                self.state = 143
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NonvalueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def nonvalue(self):
            return self.getTypedRuleContext(D96Parser.NonvalueContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_nonvalue




    def nonvalue(self):

        localctx = D96Parser.NonvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_nonvalue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLARID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.state = 147
                self.match(D96Parser.COMMA)
                self.state = 148
                self.nonvalue()
                pass
            elif token in [D96Parser.COLON]:
                self.state = 149
                self.match(D96Parser.COLON)
                self.state = 150
                self.typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def value(self):
            return self.getTypedRuleContext(D96Parser.ValueContext,0)


        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def ASSIOP(self):
            return self.getToken(D96Parser.ASSIOP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_value




    def value(self):

        localctx = D96Parser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLARID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.state = 154
                self.match(D96Parser.COMMA)
                self.state = 155
                self.value()
                self.state = 156
                self.match(D96Parser.COMMA)
                self.state = 157
                self.exp()
                pass
            elif token in [D96Parser.COLON]:
                self.state = 159
                self.match(D96Parser.COLON)
                self.state = 160
                self.typ()
                self.state = 161
                self.match(D96Parser.ASSIOP)
                self.state = 162
                self.exp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicmeth(self):
            return self.getTypedRuleContext(D96Parser.BasicmethContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_methdecl




    def methdecl(self):

        localctx = D96Parser.MethdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methdecl)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.basicmeth()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasicmethContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(D96Parser.BlockstmtContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def paralist(self):
            return self.getTypedRuleContext(D96Parser.ParalistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_basicmeth




    def basicmeth(self):

        localctx = D96Parser.BasicmethContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_basicmeth)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLARID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 172
            self.match(D96Parser.LB)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 173
                self.paralist()


            self.state = 176
            self.match(D96Parser.RB)
            self.state = 177
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(D96Parser.BlockstmtContext,0)


        def paralist(self):
            return self.getTypedRuleContext(D96Parser.ParalistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor




    def constructor(self):

        localctx = D96Parser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(D96Parser.CONSTRUCTOR)
            self.state = 180
            self.match(D96Parser.LB)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 181
                self.paralist()


            self.state = 184
            self.match(D96Parser.RB)
            self.state = 185
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(D96Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_destructor




    def destructor(self):

        localctx = D96Parser.DestructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_destructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(D96Parser.DESTRUCTOR)
            self.state = 188
            self.match(D96Parser.LB)
            self.state = 189
            self.match(D96Parser.RB)
            self.state = 190
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parasingle(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ParasingleContext)
            else:
                return self.getTypedRuleContext(D96Parser.ParasingleContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_paralist




    def paralist(self):
